# nvimdots

./: .gitattributes  .gitignore  .luarc.json  .nixd.json  0001-my-nvim-config-modify-for-v0.11-hash-14556e3.patch  Dockerfile  KeyBinding.md  LICENSE  README.md  asuka-color.txt  ayanami.cat  coc-settings.json  dots.tutor  dotstutor  flake.nix  format_disabled_dirs.txt  init.lua  init.vim  install.sh  lazy-lock.json  pyproject.toml  stylua.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  custom_config.yml  feature_request.yml  lsp_issue_report.yml
.github/workflows/: code_lint.yml  lint_code.yml  style_check.yml  update_flake.yml  (+1 more)
ftplugin/: go.vim  java.lua  rust.vim
install/: install.ps1  install.sh
lua/: chadrc.lua  lua-setup.lua  plugins.lua
luasnippets/: tex.lua
my-snippets/: package.json
nixos/: default.nix  testEnv.nix
plugin/: autopair.lua  autopair.vim  autotag.lua  autotag.vim  bufferline.lua  bufferline.vim  coc.vim  color.lua  colorizer.lua  colorizer.vim  compe.lua  compe.vim  cursorword.vim  dashboard.vim  galaxyline.lua  galaxyline.vim  gitgutter.vim  gitsigns.vim  indent.vim  lsp.lua  lsp.vim  lspinstall.vim  lspkind.lua  lspkind.vim  lspsaga.lua  lspsaga.vim  neocomplete.vim  neoformat.vim  nerdline.lua  nvimtree.vim  orgmode.lua  outline.vim  rainbow.lua  rainbow.vim  rust.vim  saga.lua  tagbar.vim  telescope.lua  treesitter.lua  treesitter.vim  (+1 more)
scripts/: dostutor.py  dotstutor.py  install.ps1  install.sh  nvim_upgrade.sh
snips/: package.json
tutor/: dots.tutor
wiki/: plugins.md
(+446 files in other folders)
