[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Kohei ASAI", email = "ko2001he@gmail.com" }]
dependencies = [
    "pynvim>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nvim"]

[tool.pyright]
venvPath = "."
venv = ".venv"
